Fix bug #32 - too much whitespace in Services section on XS devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,13 @@ header {
   text-align: justify;
 }
 
+/* center for extra small devices to avoid large gaps */
+@media (max-width: 360px) {
+  .service-description {
+    text-align: center;
+  }
+}
+
 /* ---- PROJECTS ----  */
 
 .section-projects {
